--- a/LUATeach/Pages/LuaListPage.xaml
+++ b/LUATeach/Pages/LuaListPage.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:LUATeach.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="400"
-      Title="LuaListPage">
+      Title="LuaListPage"
+      Loaded="Page_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -17,34 +18,38 @@
             <Button Name="backButton" HorizontalAlignment="Left" Content="返回" Click="BackButton_Click"/>
         </Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="1" VerticalAlignment="Top">
-            <StackPanel>
-                <Button Background="White" Height="75" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
-                    <Grid VerticalAlignment="Center">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="auto"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Grid Margin="10,0,0,0">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="关卡序号：1" FontSize="18" Foreground="#FF4A4A4A"/>
-                            <TextBlock Text="初识Lua" Grid.Column="1" FontSize="18" HorizontalAlignment="Center" FontWeight="Bold"/>
-                        </Grid>
-                        <Canvas Grid.Row="1" Height="1" Background="Black" Margin="8"/>
-                        <Grid Grid.Row="2" Margin="10,0,0,0">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="知识点" FontSize="18" Margin="0,0,10,0"/>
-                            <TextBlock Text="介绍Lua的基础知识。" Grid.Column="1" FontSize="18" Foreground="#FF8C8C8C" HorizontalAlignment="Center"/>
-                        </Grid>
-                    </Grid>
-                </Button>
-            </StackPanel>
+            <ItemsControl x:Name="levelsList">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Button Background="White" Height="75" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                            <Grid VerticalAlignment="Center">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid Margin="10,0,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="4*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding id}" FontSize="18" Foreground="#FF4A4A4A"/>
+                                    <TextBlock Text="{Binding title}" Grid.Column="1" FontSize="18" HorizontalAlignment="Center" FontWeight="Bold"/>
+                                </Grid>
+                                <Canvas Grid.Row="1" Height="1" Background="Black" Margin="8"/>
+                                <Grid Grid.Row="2" Margin="10,0,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="4*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding type}" FontSize="18" Margin="0,0,10,0"/>
+                                    <TextBlock Text="{Binding infomation}" Grid.Column="1" FontSize="18" Foreground="#FF8C8C8C" HorizontalAlignment="Center"/>
+                                </Grid>
+                            </Grid>
+                        </Button>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </ScrollViewer>
     </Grid>
 </Page>
