--- a/LUATeach/Pages/LuaListPage.xaml
+++ b/LUATeach/Pages/LuaListPage.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="LUATeach.Pages.LuaListPage"
+<Page x:Class="LUATeach.Pages.LuaListPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LUATeach.Pages"
+      xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="400"
       Title="LuaListPage"
@@ -51,5 +52,13 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
+
+        <WrapPanel Name="Loading" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
+            <ContentControl ContentTemplate="{DynamicResource {x:Static adonisUi:Templates.LoadingDots}}"
+                            Width="100"
+                            Height="100"
+                            Focusable="False"/>
+            <TextBlock Text="加载中" HorizontalAlignment="Center" FontSize="40"/>
+        </WrapPanel>
     </Grid>
 </Page>
