--- a/LUATeach/Pages/CodingPage.xaml
+++ b/LUATeach/Pages/CodingPage.xaml
@@ -1,50 +1,60 @@
-﻿<Page x:Class="LUATeach.Pages.CodingPage"
+<Page x:Class="LUATeach.Pages.CodingPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LUATeach.Pages"
       xmlns:markdig="clr-namespace:Markdig.Wpf;assembly=Markdig.Wpf"
+      xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="400"
       Title="CodingPage"
       Loaded="Page_Loaded">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid Background="#FFE6E6E6" >
-            <TextBlock x:Name="titleTextBlock" HorizontalAlignment="Center" FontSize="25"/>
-            <Button Name="backButton" HorizontalAlignment="Left" Content="返回" Click="BackButton_Click"/>
-        </Grid>
-        <markdig:MarkdownViewer Grid.Row="1" x:Name="Viewer" ScrollViewer.CanContentScroll="True">
-            <markdig:MarkdownViewer.Resources>
-                <Style TargetType="{x:Type FlowDocument}" x:Key="{x:Static markdig:Styles.DocumentStyleKey}">
-                    <Setter Property="FontFamily" Value="Consolas, Microsoft YaHei UI" />
-                    <Setter Property="TextAlignment" Value="Left" />
-                </Style>
-                <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.CodeBlockStyleKey}">
-                    <Setter Property="Background" Value="#ffd3d3d3" />
-                    <Setter Property="FontFamily" Value="Consolas, Microsoft YaHei UI" />
-                </Style>
-                <Style TargetType="{x:Type Run}" x:Key="{x:Static markdig:Styles.CodeStyleKey}">
-                    <Setter Property="Background" Value="#ffd3d3d3" />
-                    <Setter Property="FontFamily" Value="Consolas, Microsoft YaHei UI" />
-                </Style>
-                <Style TargetType="{x:Type Paragraph}">
-                    <Setter Property="Margin" Value="5" />
-                </Style>
-            </markdig:MarkdownViewer.Resources>
-        </markdig:MarkdownViewer>
-        <avalonEdit:TextEditor
+        <Grid x:Name="mainGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Background="#FFE6E6E6" >
+                <TextBlock x:Name="titleTextBlock" HorizontalAlignment="Center" FontSize="25"/>
+                <Button Name="backButton" HorizontalAlignment="Left" Content="返回" Click="BackButton_Click"/>
+            </Grid>
+            <markdig:MarkdownViewer Grid.Row="1" x:Name="Viewer" ScrollViewer.CanContentScroll="True">
+                <markdig:MarkdownViewer.Resources>
+                    <Style TargetType="{x:Type FlowDocument}" x:Key="{x:Static markdig:Styles.DocumentStyleKey}">
+                        <Setter Property="FontFamily" Value="Consolas, Microsoft YaHei UI" />
+                        <Setter Property="TextAlignment" Value="Left" />
+                    </Style>
+                    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.CodeBlockStyleKey}">
+                        <Setter Property="Background" Value="#ffd3d3d3" />
+                        <Setter Property="FontFamily" Value="Consolas, Microsoft YaHei UI" />
+                    </Style>
+                    <Style TargetType="{x:Type Run}" x:Key="{x:Static markdig:Styles.CodeStyleKey}">
+                        <Setter Property="Background" Value="#ffd3d3d3" />
+                        <Setter Property="FontFamily" Value="Consolas, Microsoft YaHei UI" />
+                    </Style>
+                    <Style TargetType="{x:Type Paragraph}">
+                        <Setter Property="Margin" Value="5" />
+                    </Style>
+                </markdig:MarkdownViewer.Resources>
+            </markdig:MarkdownViewer>
+            <avalonEdit:TextEditor
                         Grid.Row="2"
                         xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
                         Name="textEditor"
                         FontFamily="Consolas"
                         FontSize="10pt"
                         ShowLineNumbers="True"/>
-        <Button Content="提交代码" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontSize="15" Click="Button_Click"/>
+            <Button Content="提交代码" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontSize="15" Click="Button_Click"/>
+        </Grid>
+        <WrapPanel Name="Loading" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical" Visibility="Collapsed">
+            <ContentControl ContentTemplate="{DynamicResource {x:Static adonisUi:Templates.LoadingDots}}"
+                            Width="100"
+                            Height="100"
+                            Focusable="False"/>
+            <TextBlock Text="检验中" HorizontalAlignment="Center" FontSize="40"/>
+        </WrapPanel>
     </Grid>
 </Page>
