加上LLCOM的广告

--- a/LUATeach/MainWindow.xaml
+++ b/LUATeach/MainWindow.xaml
@@ -21,6 +21,7 @@
                 <TextBlock Text="软件版本："/>
                 <TextBlock Name="VersionTextBlock"/>
                 <Hyperlink NavigateUri="https://github.com/chenxuuu/LUATeach" Click="Hyperlink_Click">查看源码 / 反馈建议</Hyperlink>
+                <Hyperlink NavigateUri="https://github.com/chenxuuu/llcom" Click="Hyperlink_Click">LLCOM-用Lua自动调试串口</Hyperlink>
             </StatusBar>
         </DockPanel>
     </Grid>
