--- a/LUATeach/Pages/CodingPage.xaml
+++ b/LUATeach/Pages/CodingPage.xaml
@@ -20,6 +20,7 @@
             <Grid Background="#FFE6E6E6" >
                 <TextBlock x:Name="titleTextBlock" HorizontalAlignment="Center" FontSize="25"/>
                 <Button Name="backButton" HorizontalAlignment="Left" Content="返回" Click="BackButton_Click"/>
+                <Button Name="helpButton" HorizontalAlignment="Right" Content="上Ask求助" Click="helpButton_Click"/>
             </Grid>
             <markdig:MarkdownViewer Grid.Row="1" x:Name="Viewer" ScrollViewer.CanContentScroll="True">
                 <markdig:MarkdownViewer.Resources>
