--- a/LUATeach/Pages/RightPage.xaml
+++ b/LUATeach/Pages/RightPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LUATeach.Pages.RightPage"
+<Page x:Class="LUATeach.Pages.RightPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,5 +22,8 @@
         </StackPanel>
         <TextBlock x:Name="explainTextBlock" Grid.Row="2" FontSize="15" TextWrapping="Wrap" Margin="10"/>
         <Button Content="前往下一个部分" Grid.Row="3" FontSize="40" Margin="10" Click="Button_Click"/>
+
+        <!--统计-->
+        <WebBrowser x:Name="webPage" Visibility="Collapsed"/>
     </Grid>
 </Page>
